feat: frontend and backend integration
* feat: add feature editInfo with previous commit as .txt file

* fix(form): fix placeholder="1" to value="1" at student year and semester
feat: add save and load draft function from local storage
- Keys = draft_${form_type}

* fix: fixing spelling error in txt file

* fix: add missing red stars for required data

* fix: add mouse hover on summit and draft

* fix: restyling and fix html required

* fix: butttom styling

* feat: add login page and styles

* fix: add required in table questions

* feat: Added function to autofill some question from API /login with some mock-up structure when window loaded

* git commit -m "fix: fix function getFromType (change fetch path to API URL)

* fix: change TU logo and modify API data storage

- Updated TU logo image

- Adjusted data structure in function to match API schema

* feat: add application dashboard

* feat: added pop-up message
- at bottom-right corner for load drafted data
- at middle of screen for save data as draft

* fix: change view password image and delete show user data function

* feat: boilerplate for backend

* feat: add server port configuration and simplify route authentication

* fix: fix side bar and form

* merge: feat/login

* refactor(login): streamline password toggle and remove unused code

* fix(navigation): update back-link references to point to template.html

* fix: font style template.css

* fix: side bar padding in all form.

* fix(form): update button redirect to point to template.html

* fix(auth): add login status check and redirect to login page

* fix(template): add login redirect and improve HTML structure

* fix(template): add logout functionality and update logout link

* fix: fix form styles

* fix: fix font and logo in login page,and fix template.css and add logo.

* fix: fix auto fill function

* feat: refactor index.html to use external stylesheets and enhance application st

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,23 +1,148 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>หน้าแรก</title>
-</head>
-<body>
-    <h1>ยินดีต้อนรับสู่เว็บไซต์</h1>
-    <p>กรุณาล็อกอินก่อนเข้าถึงเนื้อหา</p>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet"
+  />
+  <title>คำร้องของฉัน</title>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/template.css">
+  </head>
+  <body>
+    <div class="sidebar">
+      <img
+        src="/img/Thammasat_Horz_logo_route1_01 1.png"
+        alt="Thammasat University Logo"
+      />
+      <div class="menu">
+        <a href="/index.html">คำร้องของฉัน</a>
+        <a href="/template/template.html">สร้างคำร้อง</a>
+      </div>
+      <a class="logout" onclick="logout()">Log out</a>
+    </div>
+
+  <div class="content">
+    <div class="header__container">
+      <div>
+        <h1>คำร้องของฉัน</h1>
+        <p>แสดงสถานะคำร้องของแบบฟอร์ม</p>
+      </div>
+      <button class="create__button" onclick="document.location = '/template/template.html'"><span class="plus-icon">&#10010;</span>สร้างคำร้อง</button>
+    </div>
     
-    <script>
-        // เช็คสถานะการล็อกอินจาก sessionStorage หรือ localStorage
-        if (!sessionStorage.getItem("isLoggedIn")) {
-            // ถ้าไม่ได้ล็อกอิน, ให้เปลี่ยนเส้นทางไปที่หน้า login
-            window.location.href = "login.html";
-        } else {
-            // ถ้าได้ล็อกอิน, แสดงข้อความต้อนรับ
-            document.body.innerHTML += "<p>คุณได้ล็อกอินแล้ว!</p>";
-        }
-    </script>
+    <div class="browser__container">
+      <div class="browser__title">
+        <span>สืบค้นสถานะคำร้อง</span>
+      </div>
+      <div class="filter">
+        <button class="button button__filter" id="ApproveFilterButton">Approved</button>
+        <button class="button button__filter" id="RejectFilterButton">Rejected</button>
+        <button class="button button__filter" id="PendingFilterButton">Pending</button>
+        <button class="button button__filter" id="DraftFilterButton">Draft</button>
+      </div>
+    </div>
+
+    <!-- Approved Applications Table -->
+    <div class="application__container" id="Application_Approve">
+      <div class="application__title">Approved / อนุมัติ</div>
+      <table class="application-table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Date</th>
+            <th>เลขทะเบียน</th>
+            <th>ชื่อ</th>
+            <th>ประเภทคำร้อง</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody id="approveTableBody"></tbody>
+      </table>
+    </div>
+    <!-- Rejected Applications Table -->
+    <div class="application__container" id="Application_Reject">
+      <div class="application__title">Rejected / ปฏิเสธ</div>
+      <table class="application-table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Date</th>
+            <th>เลขทะเบียน</th>
+            <th>ชื่อ</th>
+            <th>ประเภทคำร้อง</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody id="rejectTableBody"></tbody>
+      </table>
+    </div>
+
+    <!-- Pending Applications Table -->
+    <div class="application__container" id="Application_Pending">
+      <div class="application__title">Pending / รอดำเนินการ</div>
+      <table class="application-table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Date</th>
+            <th>เลขทะเบียน</th>
+            <th>ชื่อ</th>
+            <th>ประเภทคำร้อง</th>
+            <th>Status</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody id="pendingTableBody"></tbody>
+      </table>
+    </div>
+
+    <!-- Draft Applications Table -->
+    <div class="application__container" id="Application_Draft">
+      <div class="application__title">Draft / แบบร่าง</div>
+      <table class="application-table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Date</th>
+            <th>เลขทะเบียน</th>
+            <th>ชื่อ</th>
+            <th>ประเภทคำร้อง</th>
+            <th>Status</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody id="draftTableBody"></tbody>
+      </table>
+    </div>
+  </div>
+
+  <!-- Popup structure for canceling application -->
+  <div id="cancelPopup" class="popup">
+    <div class="popup-content">
+      <h2>ยืนยันการยกเลิกคำร้อง</h2>
+      <p>คุณต้องการยกเลิกคำร้องนี้หรือไม่?</p>
+      <div class="popup__action">
+        <button id="confirmCancel" class="button button__confirm">ยืนยัน</button>
+        <button id="closePopup" class="button button__cancel">ยกเลิก</button>
+      </div>
+    </div>
+  </div>
+  <div id="deleteDraftPopup" class="popup">
+    <div class="popup-content">
+        <h2>ยืนยันการลบแบบร่าง</h2>
+        <p>คุณต้องการลบแบบร่างนี้หรือไม่?</p>
+        <div class="popup__action">
+            <button id="confirmDeleteDraft" class="button button__confirm">ยืนยัน</button>
+            <button id="closeDeleteDraftPopup" class="button button__cancel">ยกเลิก</button>
+        </div>
+    </div>
+</div>
+  <!-- Link to JavaScript -->
+  <script src="/js/index.js"></script>
 </body>
 </html>
