--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -1,66 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login Page</title>
-    <link rel="stylesheet" href="css/loginpage_styles.css" />
-  </head>
-  <body>
-    <div class="login-container">
-      <div class="login-box">
-        <div class="title-container">
-          <div class="text-container">
-            <h1>LOGIN</h1>
-            <p>request form</p>
-          </div>
-          <img src="img/tu-logo.webp" alt="Logo" class="logo" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
+            rel="stylesheet"
+        />
+        <title>Login Page</title>
+        <link rel="stylesheet" href="css/loginpage_styles.css" />
+    </head>
+    <body>
+        <div class="overlay"></div>
+        <div class="login-container">
+            <div class="login-box">
+                <div class="title-container">
+                    <div class="text-container">
+                        <h1>LOGIN</h1>
+                        <p>request form</p>
+                    </div>
+                    <img
+                        src="img/Emblem_of_Thammasat_University.svg.png"
+                        alt="Logo"
+                        class="logo"
+                    />
+                </div>
+                <form id="loginForm">
+                    <label for="username">Username</label>
+                    <input
+                        type="text"
+                        id="username"
+                        name="username"
+                        placeholder="enter your student ID"
+                        required
+                    />
+
+                    <label for="password">Password</label>
+                    <div class="password-container">
+                        <input
+                            type="password"
+                            id="password"
+                            name="password"
+                            placeholder="enter your password"
+                            required
+                        />
+                        <span class="toggle-password" id="toggle-password">
+                            <img
+                                src="img/view.png"
+                                alt="Toggle Password"
+                                id="password-icon"
+                            />
+                        </span>
+                    </div>
+
+                    <button
+                        type="button"
+                        id="login-button"
+                        class="login-button"
+                    >
+                        LOGIN
+                    </button>
+                </form>
+            </div>
         </div>
-        <form id="loginForm">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            placeholder="enter your student ID"
-            required
-          />
 
-          <label for="password">Password</label>
-          <div class="password-container">
-            <input
-              type="password"
-              id="password"
-              name="password"
-              placeholder="enter your password"
-              required
-            />
-            <span class="toggle-password" onclick="togglePassword()">👁️</span>
-          </div>
+        <!-- Overlay -->
+        <div id="overlay"></div>
 
-          <button type="button" onclick="submitLogin()" class="login-button">
-            LOGIN
-          </button>
-        </form>
-        <p id="message"></p>
-      </div>
-    </div>
+        <!-- Popup -->
+        <div id="popup" style="display: none">
+            <div id="popup-icon">✖</div>
+            <div id="popup-message"></div>
+            <button id="popup-ok">OK</button>
+        </div>
 
-    <div class="overlay" id="overlay" style="display: none"></div>
-    <div class="popup" id="popup" style="display: none">
-      <span class="close" onclick="closePopup()">×</span>
-
-      <!-- แสดง Status และ popup-message ในบรรทัดเดียวกัน -->
-      <h2 class="red-text">Status:</h2>
-      <h2 id="popup-message" style="display: inline"></h2>
-
-      <!-- บรรทัดใหม่สำหรับ Error message ในบรรทัดเดียวกัน -->
-      <div class="error-container">
-        <h2 class="red-text" style="display: inline">Error:</h2>
-        <h2 style="display: inline; margin-left: 5px">Login ไม่สำเร็จ</h2>
-      </div>
-    </div>
-
-    <script src="js/login.js"></script>
-  </body>
+        <script src="js/login.js"></script>
+    </body>
 </html>
