style: update form styles and improve SVG icon sizes for consistency

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
         alt="Thammasat University Logo"
       />
       <div class="menu">
-        <a href="/index.html">คำร้องของฉัน</a>
+        <a class="active" href="/index.html">คำร้องของฉัน</a>
         <a href="/template/template.html">สร้างคำร้อง</a>
       </div>
       <a class="logout" onclick="logout()">Log out</a>
