fix: make form fields which are autofilled be readonly field

--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -43,18 +43,18 @@
           </div>
           <div class="form-group">
             <label for="subject" class="form-label">เรื่อง <span class="required">*</span></label>
-            <input type="text" id="subject" class="form-input" placeholder="เรื่อง" required />
+            <input readonly type="text" id="subject" class="form-input" placeholder="เรื่อง" required />
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group">
             <label for="full-name" class="form-label">ชื่อ-นามสกุล (ใส่คำนำหน้า) <span class="required">*</span></label>
-            <input type="text" id="full_name" name="fullName" class="form-input" placeholder="ชื่อ-นามสกุล" required />
+            <input readonly type="text" id="full_name" name="fullName" class="form-input" placeholder="ชื่อ-นามสกุล" required />
           </div>
           <div class="form-group">
             <label for="registration-number" class="form-label">เลขทะเบียน <span class="required">*</span></label>
-            <input type="text" id="registration_number" name="registrationNumber" class="form-input"
+            <input readonly type="text" id="registration_number" name="registrationNumber" class="form-input"
               placeholder="เลขทะเบียน" required />
           </div>
         </div>
@@ -66,11 +66,11 @@
           </div>
           <div class="form-group">
             <label for="faculty" class="form-label">คณะ <span class="required">*</span></label>
-            <input type="text" id="faculty" name="faculty" class="form-input" placeholder="คณะ" required />
+            <input readonly type="text" id="faculty" name="faculty" class="form-input" placeholder="คณะ" required />
           </div>
           <div class="form-group">
             <label for="department" class="form-label">สาขาวิชา <span class="required">*</span></label>
-            <input type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
+            <input readonly type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
           </div>
         </div>
 
@@ -90,7 +90,7 @@
 
         <div class="form-group">
           <label for="email" class="form-label">Email <span class="required">*</span></label>
-          <input type="email" id="email" name="email" class="form-input" placeholder="email@example.com" required />
+          <input readonly type="email" id="email" name="email" class="form-input" placeholder="email@example.com" required />
         </div>
 
         <div class="form-row">
