--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -42,6 +42,7 @@
               >เรื่อง <span class="required">*</span></label
             >
             <input
+              readonly
               type="text"
               id="subject"
               class="form-input"
@@ -56,13 +57,13 @@
             <label for="full-name" class="form-label"
               >ชื่อ-นามสกุล (ใส่คำนำหน้า) <span class="required">*</span></label
             >
-            <input type="text" id="full_name" name="fullName" class="form-input" placeholder="ชื่อ-นามสกุล" required />
+            <input readonly type="text" id="full_name" name="fullName" class="form-input" placeholder="ชื่อ-นามสกุล" required />
           </div>
           <div class="form-group">
             <label for="registration-number" class="form-label"
               >เลขทะเบียน <span class="required">*</span></label
             >
-            <input type="text" id="registration_number" name="registrationNumber" class="form-input" placeholder="เลขทะเบียน" required />
+            <input readonly type="text" id="registration_number" name="registrationNumber" class="form-input" placeholder="เลขทะเบียน" required />
           </div>
         </div>
 
@@ -77,13 +78,13 @@
             <label for="faculty" class="form-label"
               >คณะ <span class="required">*</span></label
             >
-            <input type="text" id="faculty" name="faculty" class="form-input" placeholder="คณะ" required />
+            <input readonly type="text" id="faculty" name="faculty" class="form-input" placeholder="คณะ" required />
           </div>
           <div class="form-group">
             <label for="department" class="form-label"
               >สาขาวิชา <span class="required">*</span></label
             >
-            <input type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
+            <input readonly type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
           </div>
         </div>
 
@@ -104,7 +105,7 @@
         </div>
 
         <div class="form-group">
-          <label for="email" class="form-label"
+          <label readonly for="email" class="form-label"
             >Email <span class="required">*</span></label
           >
           <input type="email" id="email" name="email" class="form-input" placeholder="email@example.com" required />
