--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -39,52 +39,35 @@
             <input type="date" id="date" name="date" class="form-input" placeholder="DD/MM/YYYY" required />
           </div>
           <div class="form-group">
-            <label for="subject" class="form-label"
-              >เรื่อง <span class="required">*</span></label
-            >
-            <input
-              type="text"
-              id="subject"
-              class="form-input"
-              placeholder="เรื่อง"
-              required
-            />
+            <label for="subject" class="form-label">เรื่อง <span class="required">*</span></label>
+            <input readonly type="text" id="subject" class="form-input" placeholder="เรื่อง" required />
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group">
-            <label for="full-name" class="form-label"
-              >ชื่อ-นามสกุล (ใส่คำนำหน้า) <span class="required">*</span></label
-            >
-            <input type="text" id="full_name" name="fullName" class="form-input" placeholder="ชื่อ-นามสกุล" required />
+            <label for="full-name" class="form-label">ชื่อ-นามสกุล (ใส่คำนำหน้า) <span class="required">*</span></label>
+            <input readonly type="text" id="full_name" name="fullName" class="form-input" placeholder="ชื่อ-นามสกุล" required />
           </div>
           <div class="form-group">
-            <label for="registration-number" class="form-label"
-              >เลขทะเบียน <span class="required">*</span></label
-            >
-            <input type="text" id="registration_number" name="registrationNumber" class="form-input" placeholder="เลขทะเบียน" required />
+            <label for="registration-number" class="form-label">เลขทะเบียน <span class="required">*</span></label>
+            <input readonly type="text" id="registration_number" name="registrationNumber" class="form-input"
+              placeholder="เลขทะเบียน" required />
           </div>
         </div>
 
         <div class="form-row-3">
           <div class="form-group">
-            <label for="year" class="form-label"
-              >ชั้นปี <span class="required">*</span></label
-            >
+            <label for="year" class="form-label">ชั้นปี <span class="required">*</span></label>
             <input type="text" id="year" name="year" class="form-input" placeholder="ชั้นปี" required />
           </div>
           <div class="form-group">
-            <label for="faculty" class="form-label"
-              >คณะ <span class="required">*</span></label
-            >
-            <input type="text" id="faculty" name="faculty" class="form-input" placeholder="คณะ" required />
+            <label for="faculty" class="form-label">คณะ <span class="required">*</span></label>
+            <input readonly type="text" id="faculty" name="faculty" class="form-input" placeholder="คณะ" required />
           </div>
           <div class="form-group">
-            <label for="department" class="form-label"
-              >สาขาวิชา <span class="required">*</span></label
-            >
-            <input type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
+            <label for="department" class="form-label">สาขาวิชา <span class="required">*</span></label>
+            <input readonly type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
           </div>
         </div>
 
@@ -108,7 +91,7 @@
           <label for="email" class="form-label"
             >Email <span class="required">*</span></label
           >
-          <input type="email" id="email" name="email" class="form-input" placeholder="email@example.com" required />
+          <input readonly type="email" id="email" name="email" class="form-input" placeholder="email@example.com" required />
         </div>
 
         <div class="form-row">
