--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -9,6 +9,7 @@
     <title>คำร้องจดทะเบียนล่าช้า</title>
     <title>คำร้องขอจดทะเบียนรายวิชาข้ามหลักสูตร</title>
     <link rel="stylesheet" href="/css/form_styles.css" />
+    <link rel="stylesheet" href="../css/fileattachment.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -179,6 +180,30 @@
           <textarea id="additional_explanation" name="additionalExplanation" class="form-input explanation-box" placeholder="ชี้แจงเหตุผลเพิ่มเติม" required></textarea>
         </div>
 
+        <!-- ปุ่มแนบไฟล์ -->
+        <button id="attachButton" class="attach-button">
+          <img src="../img/tdesign_attach.png" alt="Attach Icon">
+          แนบไฟล์
+        </button>
+
+        <!-- กล่องอัปโหลด -->
+        <div id="uploadBox" class="upload-container hidden">
+          <h3>อัปโหลดไฟล์</h3>
+          <div class="upload-box">
+            <div class="icon">
+              <img src="../img/upload.png" alt="upload">
+            </div>
+            <p>Drag or drop your files here</p>
+            <button id="browseButton">browse</button>
+            <input type="file" id="fileInput" multiple hidden>
+          </div>
+        </div>
+
+        <!-- แสดงรายการไฟล์ที่แนบ -->
+        <div id="fileInfo" class="file-info hidden">
+          <p>ไฟล์ที่แนบ:</p>
+          <ul id="fileList"></ul>
+        </div>
         <div class="button-group">
           <button type="button" class="draft-button">บันทึกแบบร่าง</button>
           <button type="submit" class="submit-button">ส่งคำร้อง</button>
@@ -186,5 +211,6 @@
       </form>
     </div>
     <script src="/js/form.js"></script>
+    <script src="../js/fileattachment.js"></script>
   </body>
 </html>
