--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -39,8 +39,8 @@
               <input type="date" id="date" name="date" class="form-input" placeholder="DD/MM/YYYY" required />
             </div>
             <div class="form-group">
-              <label for="subject" class="form-label">เรื่อง <span class="required">*</span></label>
-              <input readonly type="text" id="subject" name="subject" class="form-input" placeholder="เรื่อง" required />
+              <label for="form_type" class="form-label">เรื่อง <span class="required">*</span></label>
+              <input readonly type="text" id="form_type" name="form_type" class="form-input" placeholder="เรื่อง" required />
             </div>
           </div>
       
