--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -39,13 +39,13 @@
             <input type="date" id="date" name="date" class="form-input" placeholder="DD/MM/YYYY" required />
           </div>
           <div class="form-group">
-            <label for="form_type" class="form-label"
+            <label for="subject" class="form-label"
               >เรื่อง <span class="required">*</span></label
             >
             <input
               readonly
               type="text"
-              id="form_type"
+              id="subject"
               class="form-input"
               placeholder="เรื่อง"
               required
