feat: fetch data from data to Employee_form

--- a/frontend/public/Employee_Dashboard/Dashboard_Rejected.html
+++ b/frontend/public/Employee_Dashboard/Dashboard_Rejected.html
@@ -31,8 +31,8 @@
   <div class="content">
     <div class="header__container">
       <div>
-        <h1>รายการคำร้อง</h1>
-        <p>คำร้องที่รอการดำเนินการ </p>
+        <h1>คำร้องที่ปฏิเสธ</h1>
+        <p>คำร้องที่ไม่ได้รับการอนุมัติ </p>
       </div>
     </div>
     
