--- a/frontend/public/Employee_Dashboard/Dashboard_Approved.html
+++ b/frontend/public/Employee_Dashboard/Dashboard_Approved.html
@@ -9,7 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet"
   />
-  <title>รายการคำร้อง</title>
+  <title>คำร้องที่อนุมัติ</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/Dashboard.css">
   <link rel="stylesheet" href="/css/template.css">
@@ -31,8 +31,8 @@
   <div class="content">
     <div class="header__container">
       <div>
-        <h1>รายการคำร้อง</h1>
-        <p>คำร้องที่รอการดำเนินการ </p>
+        <h1>คำร้องที่อนุมัติ</h1>
+        <p>คำร้องที่ได้ทำการอนุมัติเรียบร้อยแล้ว</p>
       </div>
     </div>
 
