feat: add rejected-list page in frontend\public\request-list

--- a/frontend/public/request-list/list.html
+++ b/frontend/public/request-list/list.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="#" class="active">รายการคำร้อง</a></li>
                     <li><a href="#">คำร้องที่อนุมัติ</a></li>
-                    <li><a href="#">คำร้องที่ปฏิเสธ</a></li>
+                    <li><a href="rejected-list.html">คำร้องที่ปฏิเสธ</a></li>
                 </ul>
             </div>
             <a class="logout">Log out</a>
