fix: change some css and js

--- a/frontend/public/Employee_Dashboard/Dashboard_Rejected.html
+++ b/frontend/public/Employee_Dashboard/Dashboard_Rejected.html
@@ -43,7 +43,7 @@
             <th>ยื่นคำร้องเมื่อ</th>
             <th>ประเภทคำร้อง</th>
             <th>ยื่นคำร้องโดย</th>
-            <th>รายละเอียดคำร้องรอดำเนินการ</th>
+            <th>สถานะ</th>
           </tr>
         </thead>
         <tbody id="rejectedTableBody"></tbody>
