--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -59,6 +59,7 @@
             <th>ชื่อ</th>
             <th>ประเภทคำร้อง</th>
             <th>Status</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody id="approveTableBody"></tbody>
@@ -76,6 +77,7 @@
             <th>ชื่อ</th>
             <th>ประเภทคำร้อง</th>
             <th>Status</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody id="rejectTableBody"></tbody>
