--- a/frontend/public/Employee_Dashboard/Dashboard_Approved.html
+++ b/frontend/public/Employee_Dashboard/Dashboard_Approved.html
@@ -44,7 +44,7 @@
             <th>ยื่นคำร้องเมื่อ</th>
             <th>ประเภทคำร้อง</th>
             <th>ยื่นคำร้องโดย</th>
-            <th>รายละเอียดคำร้องรอดำเนินการ</th>
+            <th>สถานะ</th>
           </tr>
         </thead>
         <tbody id="approvedTableBody"></tbody>
