fix: some html and application.properties

--- a/frontend/public/Employee_Dashboard/Dashboard_Approved.html
+++ b/frontend/public/Employee_Dashboard/Dashboard_Approved.html
@@ -43,7 +43,7 @@
           <tr>
             <th>ยื่นคำร้องเมื่อ</th>
             <th>ประเภทคำร้อง</th>
-            <th>ยื่นคำร้องโดย</th>
+            <th>อนุมัติคำร้องโดย</th>
             <th>สถานะ</th>
           </tr>
         </thead>
