--- a/frontend/public/Employee_Dashboard/Dashboard_Rejected.html
+++ b/frontend/public/Employee_Dashboard/Dashboard_Rejected.html
@@ -42,7 +42,7 @@
           <tr>
             <th>ยื่นคำร้องเมื่อ</th>
             <th>ประเภทคำร้อง</th>
-            <th>ยื่นคำร้องโดย</th>
+            <th>ปฏิเสธคำร้องโดย</th>
             <th>สถานะ</th>
           </tr>
         </thead>
