fix: change html form path and form_view.js and login.js

--- a/frontend/public/form_view/delayed_registration.html
+++ b/frontend/public/form_view/delayed_registration.html
@@ -185,14 +185,13 @@
 
           <div class="form-group">
             <label for="rejection_reason" class="form-label">
-              เหตุผลของอาจารย์ที่ปรึกษา (Rejection Reason)
+              เหตุผลของอาจารย์ที่ปรึกษา
             </label>
             <textarea
               id="rejection_reason"
               name="rejectionReason"
               class="form-input explanation-box"
               readonly
-              placeholder="ไม่มีเหตุผลที่ระบุ"
             ></textarea>
           </div>
       </form>
