feat: add approved-list page in frontend/public/request-list

--- a/frontend/public/request-list/approved-list.html
+++ b/frontend/public/request-list/approved-list.html
@@ -22,8 +22,8 @@
         <div class="menu">
             <ul>
                 <li><a href="list.html">รายการคำร้อง</a></li>
-                <li><a href="approved-list.html">คำร้องที่อนุมัติ</a></li>
-                <li><a href="#" class="active">คำร้องที่ปฏิเสธ</a></li>
+                <li><a href="approved-list.html" class="active">คำร้องที่อนุมัติ</a></li>
+                <li><a href="rejected-list.html">คำร้องที่ปฏิเสธ</a></li>
             </ul>
         </div>
         <a class="logout">Log out</a>
@@ -31,31 +31,26 @@
 
     <!-- Main Content -->
     <main class="content">
-        <h1>คำร้องที่ปฏิเสธ</h1>
-        <p>คำร้องที่ไม่ได้รับการอนุมัติ</p>
+        <h1>คำร้องที่อนุมัติ</h1>
+        <p>คำร้องที่ได้รับการอนุมัติ</p>
         <div class="request-list">
             <div class="request-item">
                 <div class="request-info">
                     <span class="request-title">แบบฟอร์มขอจดทะเบียนรายวิชาข้ามหลักสูตร</span>
-                    <span class="request-date">ไม่อนุมัติคำร้องเมื่อ 30/10/2024</span>
+                    <span class="request-date">อนุมัติคำร้องเมื่อ 18/05/2024</span>
                 </div>
-                <button class="reject-btn">Rejected</button>
+                <span class="approved">Approved</span>
             </div>
             <div class="request-item">
                 <div class="request-info">
                     <span class="request-title">แบบฟอร์มขอลาออก</span>
-                    <span class="request-date">ไม่อนุมัติคำร้องเมื่อ 30/10/2024</span>
+                    <span class="request-date">อนุมัติคำร้องเมื่อ 08/11/2023</span>
                 </div>
-                <button class="reject-btn">Rejected</button>
-            </div>            <div class="request-item">
-                <div class="request-info">
-                    <span class="request-title">แบบฟอร์มขอถอนรายวิชา</span>
-                    <span class="request-date">ไม่อนุมัติคำร้องเมื่อ 30/10/2024</span>
-                </div>
-                <button class="reject-btn">Rejected</button>
+                <span class="approved">Approved</span>
             </div>
         </div>
         <div class="empty-list">ไม่มีรายการคำร้อง</div>
     </main>
   </div>
 </body>
+</html>
