fix: change name from requestList.html to request_list.html

--- a/frontend/public/approval/approve.html
+++ b/frontend/public/approval/approve.html
@@ -20,7 +20,7 @@
         alt="Thammasat University Logo"
       />
       <div class="menu">
-        <a href="/requestList.html">รายการคำร้อง</a>
+        <a href="/request_list.html">รายการคำร้อง</a>
         <a class="active" href="/approval/approve.html">คำร้องที่อนุมัติ</a>
         <a href="/approval/reject.html">คำร้องที่ปฏิเสธ</a>
       </div>
