--- a/frontend/public/request_list.html
+++ b/frontend/public/request_list.html
@@ -20,7 +20,7 @@
         alt="Thammasat University Logo"
       />
       <div class="menu">
-        <a class="active" href="/requestrequestList.html">รายการคำร้อง</a>
+        <a class="active" href="/requestrequest_list.html">รายการคำร้อง</a>
         <a href="/approval/approve.html">คำร้องที่อนุมัติ</a>
         <a href="/approval/reject.html">คำร้องที่ปฏิเสธ</a>
       </div>
