feat: add reason in approve button

--- a/frontend/public/form_view/delayed_registration.html
+++ b/frontend/public/form_view/delayed_registration.html
@@ -184,12 +184,12 @@
           <button id="submitFilesButton" class="submit-files-button hidden">อัปโหลดไฟล์</button>
 
           <div class="form-group">
-            <label for="rejection_reason" class="form-label">
+            <label for="advisorReason" class="form-label">
               เหตุผลของอาจารย์ที่ปรึกษา
             </label>
             <textarea
-              id="rejection_reason"
-              name="rejectionReason"
+              id="advisorReason"
+              name="advisorReason"
               class="form-input explanation-box"
               readonly
             ></textarea>
