--- a/frontend/public/form_view/reg_request.html
+++ b/frontend/public/form_view/reg_request.html
@@ -205,12 +205,12 @@
         </div>
 
         <div class="form-group">
-          <label for="rejection_reason" class="form-label">
+          <label for="advisorReason" class="form-label">
             เหตุผลของอาจารย์ที่ปรึกษา
           </label>
           <textarea
-            id="rejection_reason"
-            name="rejectionReason"
+            id="advisorReason"
+            name="advisorReason"
             class="form-input explanation-box"
             readonly
           ></textarea>
