--- a/frontend/public/form_view/resign.html
+++ b/frontend/public/form_view/resign.html
@@ -155,12 +155,12 @@
           <ul id="fileList"></ul>
         </div>
         <div class="form-group">
-          <label for="rejection_reason" class="form-label">
+          <label for="advisorReason" class="form-label">
             เหตุผลของอาจารย์ที่ปรึกษา
           </label>
           <textarea
-            id="rejection_reason"
-            name="rejectionReason"
+            id="advisorReason"
+            name="advisorReason"
             class="form-input explanation-box"
             readonly
           ></textarea>
