fix: add dean,instructor reason and fix Formstatus from pending to waiting for advisor

--- a/frontend/public/Employee_Dashboard/Dashboard_Home.html
+++ b/frontend/public/Employee_Dashboard/Dashboard_Home.html
@@ -47,7 +47,7 @@
             <th>รายละเอียดคำร้องรอดำเนินการ</th>
           </tr>
         </thead>
-        <tbody id="pendingTableBody"></tbody>
+        <tbody id="waitingForAdvisorTableBody"></tbody>
       </table>
     </div>
   <!-- Link to JavaScript -->
