--- a/frontend/public/Advisor/AdvisorDashboard_Approved.html
+++ b/frontend/public/Advisor/AdvisorDashboard_Approved.html
@@ -21,9 +21,9 @@
         alt="Thammasat University Logo"
       />
       <div class="menu">
-        <a href="/Employee_Dashboard/Dashboard_Home.html">รายการคำร้อง</a>
-        <a class="active" href="/Employee_Dashboard/Dashboard_Approved.html">คำร้องที่อนุมัติ</a>
-        <a href="/Employee_Dashboard/Dashboard_Rejected.html">คำร้องที่ปฏิเสธ</a>
+        <a href="/Advisor/AdvisorDashboard_Home.html">รายการคำร้อง</a>
+        <a class="active" href="/Advisor/AdvisorDashboard_Approved.html">คำร้องที่อนุมัติ</a>
+        <a href="/Advisor/AdvisorDashboard_Rejected.html">คำร้องที่ปฏิเสธ</a>
       </div>
       <a class="logout" onclick="logout()">Log out</a>
     </div>
@@ -51,6 +51,6 @@
       </table>
     </div>
   <!-- Link to JavaScript -->
-  <script src="/js/Dashboard.js"></script>
+  <script src="/js/AdvisorDashboard.js"></script>
 </body>
 </html>
