feat: Add for instructor approved rejected and fix some path

--- a/frontend/public/Advisor/AdvisorDashboard_Approved.html
+++ b/frontend/public/Advisor/AdvisorDashboard_Approved.html
@@ -11,7 +11,7 @@
   />
   <title>คำร้องที่อนุมัติ</title>
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/Dashboard.css">
+  <link rel="stylesheet" href="/css/Advisor.css">
   <link rel="stylesheet" href="/css/template.css">
   </head>
   <body>
