--- a/frontend/public/Advisor/AdvisorDashboard_Rejected.html
+++ b/frontend/public/Advisor/AdvisorDashboard_Rejected.html
@@ -11,8 +11,8 @@
   />
   <title>รายการคำร้อง</title>
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/Advisor.css">
   <link rel="stylesheet" href="/css/template.css">
-  <link rel="stylesheet" href="/css/Dashboard.css">
   </head>
   <body>
     <div class="sidebar">
