--- a/frontend/public/Instructor/InstructorDashboard_Home.html
+++ b/frontend/public/Instructor/InstructorDashboard_Home.html
@@ -11,7 +11,7 @@
   />
   <title>รายการคำร้อง</title>
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/Advisor.css">
+  <link rel="stylesheet" href="/css/Instructor.css">
   <link rel="stylesheet" href="/css/template.css">
   </head>
   <body>
@@ -21,9 +21,9 @@
         alt="Thammasat University Logo"
       />
       <div class="menu">
-        <a class="active"href="/Advisor/AdvisorDashboard_Home.html">รายการคำร้อง</a>
-        <a href="/Advisor/AdvisorDashboard_Approved.html">คำร้องที่อนุมัติ</a>
-        <a href="/Advisor/AdvisorDashboard_Rejected.html">คำร้องที่ปฏิเสธ</a>
+        <a class="active"href="/Instructor/InstructorDashboard_Home.html">รายการคำร้อง</a>
+        <a href="/Instructor/InstructorDashboard_Approved.html">คำร้องที่อนุมัติ</a>
+        <a href="/Instructor/InstructorDashboard_Rejected.html">คำร้องที่ปฏิเสธ</a>
       </div>
       <a class="logout" onclick="logout()">Log out</a>
     </div>
@@ -47,10 +47,10 @@
             <th>รายละเอียดคำร้องรอดำเนินการ</th>
           </tr>
         </thead>
-        <tbody id="waitingForAdvisorTableBody"></tbody>
+        <tbody id="waitingForInstructorTableBody"></tbody>
       </table>
     </div>
   <!-- Link to JavaScript -->
-  <script src="/js/AdvisorDashboard.js"></script>
+  <script src="/js/InstructorDashboard.js"></script>
 </body>
 </html>
